Mon May 22 19:49:29 CEST 2006  Guillaume Desmottes <cass@skynet.be>

	* po/POTFILES.in:
	  - Add src/fe-gnome/userlist.c in the list of translatable files.

Sun May 21 16:34:23 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/navigation-tree.c:
	  - Change "Auto-join on startup" to "Auto-join on connect" to
	    hopefully make the behavior more clear. (#338300)

Sun May 21 19:06:43 CEST 2006  Guillaume Desmottes <cass@skynet.be>

	* src/common/plugin.c:
	  - Backport from xchat CVS.
	  - xchat_get_info can now returns session independent informations
	    when none session is started. It should fix a crasher when we
	    try to load the Perl plugin without any session started.
	    (Launchpad: #45235)

Sat May 20 17:28:42 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/Makefile.am:
	  - Change library reference to hopefully fix some builds. (#331679)

Sat May 20 17:19:53 MDT 2006  Przemyslaw Grzegorczyk <pgrzegorczyk@gmail.com>

	* configure.ac:
	* po/LINGUAS:
	  - Update for intltool 0.35 and new po/LINGUAS standards. (#339300)

Sat May 20 15:45:18 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/preferences.c:
	  - Add gconf listeners to update preferences when they change in
	    the gconf daemon. (#332926)

Wed May 17 23:53:21 CEST 2006  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/irc-network.c:
	  - Add encodings KOI8-R (Cyrillic) and CP1257 (Baltic).
	    (#341897)

Sun May 14 18:29:10 CEST 2006  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/fe-gnome.c:
	  - Don't use the "--no-auto" option when we save the
	    GNOME session. (Launchpad: #39863)

Mon May  1 00:06:26 CEST 2006  Christian Persch <chpe@gnome.org>

	* src/fe-gnome/channel-list.c:
	* data/channel-list.glade:
	  - Code cleanup: use a GtkTable to dispose widgets.
	    (#340190).

Sun Apr 30 23:52:11 CEST 2006  Christian Persch <chpe@gnome.org>

	* data/xchat-gnome.glade:
	* data/topic-change.glade:
	* data/connect-dialog.glade: